# ComfyUI-Mobile-Fix

./: NOTICE  README.md  pyproject.toml
ComfyUI-Mobile-Fix/: NOTICE  README.md  __init__.py  pyproject.toml
ComfyUI-Mobile-Fix/web/: simpleTouchSupport.js
web/: simpleTouchSupport.js
