[project]
name = "comfyui-mobile-fix"
description = "A fixed and optimized version of touch gestures for ComfyUI. Solves freezing issues and improves mobile usability."
version = "1.0.0"

[project.urls]
Repository = "https://github.com/PretaxIvy/ComfyUI-Mobile-Fix"

[tool.comfy]
PublisherId = "PretaxIvy"
DisplayName = "ComfyUI-Mobile-Fix"

Icon = ""
